# crawl4ai-rust-mcp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.bmad-core/: install-manifest.yaml
crates/crawler/: Cargo.toml
crates/crawler/examples/: crawler_example.rs
crates/crawler/src/: client.rs  config.rs  error.rs  extractor.rs  lib.rs  orchestrator.rs  parser.rs  rate_limiter.rs  robots.rs
crates/crawler/tests/: crawler_tests.rs
crates/embeddings/: Cargo.toml
crates/embeddings/examples/: embeddings_example.rs
crates/embeddings/src/: config.rs  error.rs  lib.rs  models.rs  pooling.rs  processor.rs  service.rs  tokenizer.rs
crates/embeddings/tests/: embeddings_tests.rs
crates/graph-store/: Cargo.toml
crates/graph-store/src/: client.rs  config.rs  error.rs  lib.rs
crates/mcp-protocol/: Cargo.toml
crates/mcp-protocol/src/: error.rs  lib.rs  types.rs  zero_copy.rs
crates/mcp-protocol/tests/: zero_copy_tests.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  routes.rs  server.rs  sse.rs  state.rs
crates/mcp-server/src/handlers/: crawl.rs  health.rs  mcp.rs  mod.rs  search.rs  websocket.rs
crates/mcp-server/tests/: integration_tests.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs  parallel_simd.rs  simd_benchmarks.rs  simd_ops.rs  simd_search.rs
crates/storage/: Cargo.toml
crates/storage/src/: backup.rs  duckdb_store.rs  error.rs  hybrid.rs  lib.rs  mmap.rs  query_optimizer.rs  rocksdb_store.rs  sync.rs  transaction.rs
crates/storage/tests/: mmap_tests.rs
crates/vector-store/: Cargo.toml
crates/vector-store/benches/: quantization_bench.rs
crates/vector-store/examples/: vector_store_example.rs
crates/vector-store/src/: client.rs  config.rs  error.rs  indexing.rs  lib.rs  models.rs  search.rs
crates/vector-store/tests/: indexing_tests.rs  vector_store_tests.rs
