[package]
name = "crawler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
futures.workspace = true

# Crawling specific
scraper = "0.24"
html5ever = "0.35"
markup5ever_rcdom = "0.35"
ego-tree = "0.10"
encoding_rs = "0.8"

# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"

# Pattern matching
regex = "1.11"

[dev-dependencies]
mockall.workspace = true
wiremock = "0.6"