[package]
name = "mcp-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Zero-copy serialization
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# Zero-copy parsing
zerocopy = { version = "0.8", features = ["derive"] }
rkyv = "0.8"

# Concurrency
parking_lot = "0.12"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true