[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
futures.workspace = true
tokio-stream.workspace = true

# System info
num_cpus = "1.16"

# Internal crates
mcp-protocol = { path = "../mcp-protocol" }
crawler = { path = "../crawler" }
embeddings = { path = "../embeddings" }
vector-store = { path = "../vector-store" }
graph-store = { path = "../graph-store" }
storage = { path = "../storage" }
search = { path = "../search" }

# Server-specific
axum-extra = { version = "0.9", features = ["typed-header"] }
async-sse = "5.1"

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"
reqwest = { workspace = true, features = ["json"] }
tempfile = "3.14"
tokio-tungstenite = "0.24"
futures = { workspace = true }