[package]
name = "search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Search
tantivy.workspace = true
simsimd.workspace = true

# Internal
embeddings = { path = "../embeddings" }
vector-store = { path = "../vector-store" }
storage = { path = "../storage" }

# SIMD operations  
bytemuck = "1.21"
rayon.workspace = true
fastrand.workspace = true
num_cpus.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
default = ["simd"]
simd = []