[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
memmap2.workspace = true

# Storage engines
rocksdb.workspace = true
duckdb.workspace = true

# Utilities
bincode = "1.3"
lz4 = "1.28"
async-trait = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
md5 = "0.7"
url = "2.5"
sha2 = "0.10"
futures = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
criterion.workspace = true